--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
 
     
 <body>
-<h1>Computação distribuida: Conversor Reis - Dólares</h1>   
+<h1>Computação distribuida: Conversor Reais - Dólares</h1>   
 <div id="text">
 <p>Insira o valor em real</p>
 <input type="number" id="moeda"> <button onclick="teste()">Converter para dólar</button>
