Adição de aviso - Scripts não seguros

--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
 <input type="number" id="moeda"> <button onclick="teste()">Converter para dólar</button>
 <div id="dol"></div>   
 <div id="convertido"></div>
-
+<p>Atenção!! Para funcionar, deve ser ativado a opção do google chrome "carregar scrips não seguros", ou o equivalente do seu navegador.</p><br>
 <p>Rodrigo Nascimento --- Tia: 31711030</p>
 </div>    
 
